Change x and o's font to reduce vertical alignment bug

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ h1 {
     justify-content: center;
     align-items: center;
     font-size: 4rem;
+    font-family: arial, sans-serif;
 }
 
 #gameArea {
